--- a/otaconfig.example.ini
+++ b/otaconfig.example.ini
@@ -8,14 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-extra_configs=
-  otaconfig.ini
-
-[env:esp32-s2-saola-1]
-platform = espressif32
-board = esp32dev
-framework = arduino
-lib_deps = 
-	256dpi/MQTT@^2.5.1
-	arduino-libraries/NTPClient@^3.2.1
+[env]
+upload_flags=
+  --auth=OTA_PASSWORD
